Done adding projects

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </section>
 
     <section id="projects">
-        <div class="allProjects">
             <h3>My Projects</h3>
+            <div class="projects">
             <div class="project">
                 <h4>Community Science Museum</h4>
                 <p>This is an informative website for an interactive science museum target for primary and middle school children.</p>
@@ -38,9 +38,27 @@
                 <img src="/images/csm2.png" alt="The visit page of Community Science Museum.">
                 <img src="/images/csm3.png" alt="This is an image of the page of community Science Museum where you can see what is exhibited.">
                 <img src="/images/csm4.png" alt="On this image from the community Science Museum you can see how you can support, volunteer or how to contact the museum.">
+                <p>You can visit the github repo <a href="https://github.com/Noizenne/SemesterProject1">here</a>, and the live site <a href="https://peaceful-hopper-5e3761.netlify.app/">here</a>.</p>
             </div>
-            <div class="project"></div>
-            <div class="project"></div>
+            <div class="project">
+                <h4>GameHub - The Universe of Games</h4>
+                <p>This is a gaming e-commerce site where you can buy and sell games.</p>
+                <img src="/images/gameHub.png" alt="An image of the homepage of GameHub.">
+                <img src="/images/gamehub2.png" alt="An image of some games on GameHub.">
+                <img src="/images/gamehub3.png" alt="An image of an account page on GameHub.">
+                <p>You can visit the github repo <a href="https://github.com/Noizenne/Karla-Mae-Rabe_Interaction-Design_CA">here</a>, and the live site <a href="https://tender-poitras-14482d.netlify.app/">here</a>.</p>
+            </div>
+            <div class="project">
+                <h4>The Beauty Blog</h4>
+                <p>A blog site with the beauty theme where you can get tips and tricks.</p>
+                <img src="/images/beautyBlog.png" alt="The image of the homepage of The Beauty Blog.">
+                <img src="/images/beauty2.png" alt="An image of a list of article on the Beauty Blog.">
+                <img src="/images/beauty3.png" alt="An image of an article from the Beauty Blog.">
+                <img src="/images/beauty4.png" alt="An image of the contact page of the Beauty Blog.">
+                <p>You can visit the github repo <a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-Noizenne">here,</a> <br> and the live site <a href="https://cosmic-pudding-302fb0.netlify.app/index.html">here</a>.</p>
+            </div>
+
+        </div>
         </div>
     </section>
 
@@ -69,6 +87,10 @@
 
     <section id="contact">
         <h3>Contact</h3>
+        <div class="contact">
+            <p class="hello">Do you have any questions ? <br> Reach out!</p>
+            <p class="info"> karlamae2405@gmail.com <br> <a href="https://www.linkedin.com/in/karla-mae-rabe-71b1351b5/">LinkedIn</a></p>
+         </div>
     </section>
     
 <script src="js/index.js"></script>
